--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #09f3eb;
+    background-color: #2bf0e6;
     color: #333;
     margin: 0;
     padding: 0;
@@ -15,19 +15,19 @@ header {
     color: white;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 15px;
+    justify-content: center;
+    padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     flex-wrap: wrap;
 }
 #logo {
-    width: 80px;
+    width: 100px;
     height: auto;
     margin-right: 20px;
 }
 h1 {
-    font-size: 22px;
+    font-size: 24px;
     text-align: center;
     flex-grow: 1;
 }
@@ -41,18 +41,12 @@ h1 {
     flex-direction: column;
     align-items: center;
 }
-.himno img {
+
+.himno img{
     max-width: 100%;
     height: auto;
     border-radius: 8px;
     margin-bottom: 10px;
-    object-fit: cover;
-}
-@media (min-width: 769px) {
-    .himno img {
-        max-width: 600px;
-        height: auto;
-    }
 }
 .slider-container {
     width: 100%;
